--- a/npkpir_23/web/ksiegowa/sub/layoutZmianapodatnika/north.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/layoutZmianapodatnika/north.xhtml
@@ -9,7 +9,7 @@
       xmlns:pe="http://primefaces.org/ui/extensions">
     <pe:layoutPane position="north" size="50" resizable="true" closable="true">
         <p:panelGrid columns="3" style="width: 90%">
-            <h:outputText value="Biuro Rachunkowe Taxman Grzegorz Grzelczyk - Panel Ksiegowej" style="width: 50%; font-size: 15px"/>
+            <h:outputText value="TAXMAN System Księgowo-Kadrowy" style="width: 50%; font-size: 15px"/>
              <h:form id="formNorth">
                  <p:commandButton id="pl" value="pl" actionListener="#{localeChanger.polishAction}" type="submit" ajax="false"/>
                  <p:commandButton id="en" value="en" actionListener="#{localeChanger.englishAction}" type="submit" ajax="false"/>
