--- a/npkpir_23/web/wspolny/wspolnyFakturaUstawienia.xhtml
+++ b/npkpir_23/web/wspolny/wspolnyFakturaUstawienia.xhtml
@@ -11,22 +11,39 @@
         </ui:define>
         <ui:define name="body">
             <f:view>
-                
-                <bcf:ajaxs/>
-                <pe:layout fullPage="true"  >
-                        <ui:include src="sub/layoutFaktura/north.xhtml"/>  <!-- panel polnocny-->
-                        <ui:include src="#{pozycjeNaFakturzeView.westustawienia}"/>   <!-- panel zachodni-->
-                    <pe:layoutPane position="center">
-                        
-                        <p:panel toggleable="true" closable="true" style="width: 1000px;"  rendered="#{facesContext.viewRoot.locale.language.equals('pl')}">
-                            <f:facet name="header">
-                                <h:outputText value="Strona służy do generowania, przeglądania i księgowania faktur dla firmy #{WpisView.podatnikObiekt.nazwapelnaPDF}"/>
-                            </f:facet>
-                        </p:panel>
-                        <ui:include src="sub/menu_wiad.xhtml"/> 
-                        <ui:include src="sub/fakturaustawienia.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
-                    </pe:layoutPane>
-                </pe:layout>
+            <bcf:ajaxs/>
+                <div class="flex flex-column min-h-screen">
+                    <!-- panel północny -->
+                    <div class="col-12">
+                        <ui:include src="sub/layoutNowy/north.xhtml"/>
+                    </div>
+
+                    <!-- główna zawartość strony -->
+                    <div class="flex-grow-1 grid grid-nogutter">
+                        <!-- panel zachodni -->
+                        <div class="col-12 md:col-4 lg:col-3"  style="max-width: 260px;">
+                            <ui:include src="#{pozycjeNaFakturzeView.westustawienia}"/>   <!-- panel zachodni-->
+                        </div>
+
+                        <!-- panel centralny -->
+                        <div class="col-12 md:col-9 lg:col-10 flex">
+                            <div class="vertical-container">
+                                <p:panel toggleable="true" closable="true" style="width: 1000px;"  rendered="#{facesContext.viewRoot.locale.language.equals('pl')}">
+                                    <f:facet name="header">
+                                        <h:outputText value="Strona służy zmiany ustawien parametrów faktury"/>
+                                    </f:facet>
+                                </p:panel>
+                                <ui:include src="sub/menu_wiad.xhtml"/>   <!-- menu contextowe i pole wiadomosci growl-->
+                               <ui:include src="sub/fakturaustawienia.xhtml"/>  
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- panel południowy (footer) -->
+                    <div class="col-12">
+                        <ui:include src="sub/layoutNowy/south.xhtml"/>
+                    </div>
+                </div>
             </f:view>
         </ui:define>
     </ui:composition>
