--- a/npkpir_23/web/guestFaktura/sub/tablica.xhtml
+++ b/npkpir_23/web/guestFaktura/sub/tablica.xhtml
@@ -6,7 +6,19 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:ft="http://primefaces.prime.com.tr/facestrace"
     >
-    
+    <div class="vertical-container">
+     <p:panel toggleable="true" closable="true" style="max-width: 1000px;">
+                <f:facet name="header">
+                    <h:outputText value="Strona służy do wyświetlania poszczególnych zapisów w danym miesiącu. Zmiana miesiąca możliwa jest w panelu po lewej."/><br/>
+                    <h:outputText value="Dane po pobraniu mogąć być sortowane. Wystarczy kliknąć na symbol strzałek znajdujących sie obok opisu kolumny."/> <br/>
+                    <h:outputText value="Można wyszukiwać poszczególne dokumenty wg różnych kryteriów wpisując wyszukiwaną frazę w puste pole nad kolumną. Grosze oddzielamy od złotówek KROPKĄ."/><br/>
+                    <h:outputText value="Po kliknięciu myszą na kółko z białą strzałką rozwinie się informacja o VAT."/><br/>
+                    <h:outputText value="Dokumenty sprzedaży są wyróżnione kolorem niebieskim. Korekty zmniejszające - czerwonym."/><br/>
+                    <h:outputText value="Po zaznaczeniu dokumentu i wciśnięciu prawego przycisku myszy otrzymujemy dostęp do menu kontekstowego umożliwiającego
+                                  m.in drukowanie zaznaczonego dokumentu bądź dodanie go do dokumentów obserwowanych."/>
+                </f:facet>
+            </p:panel>
+        </div>
 
 </ui:composition>   
 
