--- a/npkpir_23/web/sub/wyborpodatnikaFK.xhtml
+++ b/npkpir_23/web/sub/wyborpodatnikaFK.xhtml
@@ -36,7 +36,7 @@
                 <p:column >
                     <p:commandButton  id="okbutton" action="#{WpisView.wroc()}" 
                                       style="width: 150px; float: right;" 
-                                      actionListener="#{WpisView.wpisAktualizuj()}" value="#{mgs.wybierzmcrok}"/>
+                                      actionListener="#{WpisView.naniesDaneDoWpisOkres()}" value="#{mgs.wybierzmcrok}"/>
                 </p:column>
                 <p:defaultCommand target="okbutton" />
             </p:panelGrid>
