--- a/npkpir_23/web/wspolny/sub/layoutFaktura/north.xhtml
+++ b/npkpir_23/web/wspolny/sub/layoutFaktura/north.xhtml
@@ -11,7 +11,7 @@
     
         <p:panelGrid columns="2" style="width: 90%">
             
-            <h:outputText value="Biuro Rachunkowe Taxman Grzegorz Grzelczyk - Panel Ksiegowej. Firma - #{WpisView.podatnikObiekt.nazwapelnaPDF}" style="width: 50%; font-size: 15px"/>
+            <h:outputText value="TAXMAN System Księgowo-Kadrowy. Firma - #{WpisView.podatnikObiekt.nazwapelnaPDF}" style="width: 50%; font-size: 15px"/>
 <!--            <h:form id="messageForm">
             <h:outputText id="Wiadomosc" value="Wiadomosc z : {messageReceiver.wiadomosc}" style="font-weight: 900;font-size: 17px"/>
                 <p:growl life="3600"  id="messageWiad"/>
