--- a/npkpir_23/web/wspolny/sub/layoutTablicaSrodkiGuest/north.xhtml
+++ b/npkpir_23/web/wspolny/sub/layoutTablicaSrodkiGuest/north.xhtml
@@ -12,7 +12,7 @@
         <p:panelGrid columns="2" style="width: 90%">
            
 
-             <h:outputText value="Biuro Rachunkowe Taxman Grzegorz Grzelczyk - Panel Ksiegowej. Firma - #{WpisView.podatnikObiekt.nazwapelnaPDF}" style="width: 50%; font-size: 15px"/>
+             <h:outputText value="TAXMAN System Księgowo-Kadrowy. Firma - #{WpisView.podatnikObiekt.nazwapelnaPDF}" style="width: 50%; font-size: 15px"/>
             
         </p:panelGrid>
     </pe:layoutPane>
