--- a/npkpir_23/web/wspolny/wspolnyFaktura.xhtml
+++ b/npkpir_23/web/wspolny/wspolnyFaktura.xhtml
@@ -7,36 +7,53 @@
       xmlns:bcf="http://brzaskun.com/facelets" xmlns:pe="http://primefaces.org/ui/extensions">
     <ui:composition template="/templateFK.xhtml">
         <ui:define name="title">
-            <h:outputText value="Księgi handlowe"></h:outputText>
+            <h:outputText value="Taxman system księgowy"></h:outputText>
         </ui:define>
         <ui:define name="body">
-            <f:view>
-                 
+             <f:view>
                 <bcf:ajaxs/>
-                <pe:layout fullPage="true"  >
-                        <ui:include src="sub/layoutFaktura/north.xhtml"/>  <!-- panel polnocny-->
-                        <ui:include src="#{pozycjeNaFakturzeView.westustawienia}"/>   <!-- panel zachodni-->
-                    <pe:layoutPane position="center">
-                        
-                        <p:panel toggleable="true" closable="true" style="width: 1000px;"  rendered="#{facesContext.viewRoot.locale.language.equals('pl')}">
-                            <f:facet name="header">
-                                <h:outputText value="Strona służy do generowania, przeglądania i księgowania faktur dla firmy #{WpisView.podatnikObiekt.nazwapelnaPDF}"/>
-                            </f:facet>
-                        </p:panel>
-                        <ui:include src="sub/menu_wiad.xhtml"/>
-                        <h:form id="zmianaokresuguest">
-                            <p:panelGrid columns="2" style="padding: 10px;">
-                              <h:outputText value="okres rozliczeniowy: " />
-                                    <p:selectOneMenu id="okresWpisu" value="#{WpisView.okreswpisu}"  style="width: 100px;margin-left: 10px;" converter="#{okresConverter}">
-                                        <f:selectItems value="#{okresBean.okresylista}" var="ytem" itemLabel="#{ytem.rok}-#{ytem.mc}" itemValue="${ytem}"/>
-                                        <p:ajax event="change" partialSubmit="true" listener="#{fakturaView.init()}" global="true" 
-                                                update="@(form)"/>
-                                    </p:selectOneMenu>
-                              </p:panelGrid>
-                        </h:form>
-                        <ui:include src="sub/faktura.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
-                    </pe:layoutPane>
-                </pe:layout>
+                <div class="flex flex-column min-h-screen">
+                    <!-- panel północny -->
+                    <div class="col-12">
+                        <ui:include src="sub/layoutNowy/north.xhtml"/>
+                    </div>
+
+                    <!-- główna zawartość strony -->
+                    <div class="flex-grow-1 grid grid-nogutter">
+                        <!-- panel zachodni -->
+                        <div class="col-12 md:col-4 lg:col-3"  style="max-width: 260px;">
+                            <ui:include src="#{pozycjeNaFakturzeView.westustawienia}"/>   <!-- panel zachodni-->
+                        </div>
+
+                        <!-- panel centralny -->
+                        <div class="col-12 md:col-9 lg:col-10 flex">
+                            <div class="vertical-container">
+                                <p:panel toggleable="true" closable="true" style="width: 1000px;"  rendered="#{facesContext.viewRoot.locale.language.equals('pl')}">
+                                    <f:facet name="header">
+                                        <h:outputText value="Strona służy do generowania, przeglądania i księgowania faktur dla firmy #{WpisView.podatnikObiekt.nazwapelnaPDF}"/>
+                                    </f:facet>
+                                </p:panel>
+                                <h:form id="zmianaokresuguest">
+                                    <p:panelGrid columns="2" style="padding: 10px;">
+                                        <h:outputText value="okres rozliczeniowy: " />
+                                        <p:selectOneMenu id="okresWpisu" value="#{WpisView.okreswpisu}"  style="width: 100px;margin-left: 10px;" converter="#{okresConverter}">
+                                            <f:selectItems value="#{okresBean.okresylista}" var="ytem" itemLabel="#{ytem.rok}-#{ytem.mc}" itemValue="${ytem}"/>
+                                            <p:ajax event="change" partialSubmit="true" listener="#{fakturaView.init()}" global="true" 
+                                                    update="@(form)"/>
+                                        </p:selectOneMenu>
+                                    </p:panelGrid>
+                                </h:form>
+                                <ui:include src="sub/menu_wiad.xhtml"/>   <!-- menu contextowe i pole wiadomosci growl-->
+                                <ui:include src="sub/faktura.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- panel południowy (footer) -->
+                    <div class="col-12">
+                        <ui:include src="sub/layoutNowy/south.xhtml"/>
+                    </div>
+                </div>
             </f:view>
         </ui:define>
     </ui:composition>
