problemy z fileupload import pkpir

--- a/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
@@ -670,7 +670,7 @@
                     </p:panelGrid>
                 </h:form>
             </p:panelGrid>
-            <p:panelGrid columns="4" style="width: 600px" rendered="#{WpisVryczalt0ksiega1 eq false}">
+            <p:panelGrid columns="4" style="width: 600px" rendered="#{WpisView.ryczalt0ksiega1 eq false}">
                 <h:form id="formpi1" style="width: 400px" >
                     <p:growl life="3600"  id="messages" ><p:autoUpdate/></p:growl>
 
