--- a/npkpir_23/web/wspolny/wspolnyPlanKont.xhtml
+++ b/npkpir_23/web/wspolny/wspolnyPlanKont.xhtml
@@ -13,7 +13,7 @@
             <f:view>
                 <bcf:ajaxs/>
                 <pe:layout fullPage="true"  >
-                        <ui:include src="sub/layoutFaktura/north.xhtml"/>  <!-- panel polnocny-->
+                        <ui:include src="sub/layoutRozrachunki/north.xhtml"/>  <!-- panel polnocny-->
                         <ui:include src="sub/layoutRozrachunki/west.xhtml"/>   <!-- panel zachodni-->
                     <pe:layoutPane position="center">
                         <p:panel toggleable="true" closable="true" style="width: 1000px;">
