--- a/npkpir_23/web/wspolny/sub/plankont.xhtml
+++ b/npkpir_23/web/wspolny/sub/plankont.xhtml
@@ -14,25 +14,26 @@
                 <p:dataTable lazy="false"  id="dataList" value="#{planKontView.wykazkont}" var="loop"  selectionMode="single" 
                              rowStyleClass="#{loop.bilansowewynikowe eq 'bilansowe' ? (loop.level eq 0 ? 'row1' : loop.level eq 1 ? 'row2' : loop.level eq 2 ? 'row3' : 'row4') : (loop.level eq 0 ? 'row1w' : loop.level eq 1 ? 'row2w' : loop.level eq 2 ? 'row3w' : 'row4w')}" 
                              styleClass="tablicaplankont"
-                             style="max-width: 1200px; height: 600px;" emptyMessage="Brak utworzonych kont dla firmy" rowKey="#{loop.id}"
+                             style="max-width: 1200px; max-height: 700px;overflow-y: scroll;" emptyMessage="Brak utworzonych kont dla firmy" rowKey="#{loop.id}"
                              >
-                    <p:columnGroup>
+                    <f:facet name="header">
                         <p:row >
                             <p:column colspan="1" headerText="" width="1" />
-                            <p:column colspan="1" headerText="#{mgs.numerkonta}" width="100" />
+                            <p:column colspan="1" headerText="nr konta" width="100" />
                             <p:column colspan="1" headerText="#{mgs.tłumaczenie}" width="200" rendered="#{!facesContext.viewRoot.locale.language.equals('pl')}"/>
-                            <p:column colspan="1" headerText="#{mgs.nazwapełna}" width="300"/>
-                            <p:column colspan="1" headerText="#{mgs.nazwaskrócona}" width="200"/>
+                            <p:column colspan="1" headerText="nazwa pełna" width="300"/>
+                            <p:column colspan="1" headerText="nazwa skrócona" width="200"/>
                             <p:column colspan="1" headerText="b/w" width="20"/>
                             <p:column colspan="1" headerText="rozrach." width="50"/>
                             <p:column colspan="1" headerText="P/K" width="40"/>
                         </p:row>
-                    </p:columnGroup>
-                    <p:column>
+
+                        </f:facet>
+                    <p:column width="10">
                         <h:outputText value="#{loop.level}" style="font-size: 0.5pt;"/>
                     </p:column>
-                    <p:column styleClass="#{loop.level eq 2 ? 'druga' : null}" sortFunction="#{kontoSortView.sortujKonto}" sortBy="#{loop}"
-                             >>
+                    <p:column width="50" styleClass="#{loop.level eq 2 ? 'druga' : null}" sortFunction="#{kontoSortView.sortujKonto}" sortBy="#{loop}"
+                             >
                         <h:outputText value="#{loop.nrkonta}" rendered="#{loop.nrkonta eq '0' ? false : (loop.level eq '0' ? true : false)}" /> 
                         <h:outputText value="#{loop.pelnynumer}" rendered="#{loop.nrkonta eq '0' ? false : (loop.level eq '1' ? true : false)}" style="margin-left: 10px;"/> 
                         <h:outputText value="#{loop.pelnynumer}" rendered="#{loop.nrkonta eq '0' ? false : (loop.level eq '2' ? true : false)}" style="margin-left: 20px;"/> 
