--- a/npkpir_23/web/wspolny/wspolnyPlanKont.xhtml
+++ b/npkpir_23/web/wspolny/wspolnyPlanKont.xhtml
@@ -10,18 +10,37 @@
             <h:outputText value="Księgi handlowe"></h:outputText>
         </ui:define>
         <ui:define name="body">
-            <f:view>
+
+             <f:view>
                 <bcf:ajaxs/>
-                <pe:layout fullPage="true"  >
-                        <ui:include src="sub/layoutRozrachunki/north.xhtml"/>  <!-- panel polnocny-->
-                        <ui:include src="sub/layoutRozrachunki/west.xhtml"/>   <!-- panel zachodni-->
-                    <pe:layoutPane position="center">
-                        <p:panel toggleable="true" closable="true" style="width: 1000px;">
-                        </p:panel>
-                        <ui:include src="sub/menu_wiad.xhtml"/> 
-                        <ui:include src="sub/plankont.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
-                    </pe:layoutPane>
-                </pe:layout>
+                <div class="flex flex-column min-h-screen">
+                    <!-- panel północny -->
+                    <div class="col-12">
+                        <ui:include src="sub/layoutNowy/north.xhtml"/>
+                    </div>
+
+                    <!-- główna zawartość strony -->
+                    <div class="flex-grow-1 grid grid-nogutter">
+                        <!-- panel zachodni -->
+                        <div class="col-12 md:col-4 lg:col-3"  style="max-width: 260px;">
+                            <ui:include src="#{pozycjeNaFakturzeView.westustawienia}"/>   <!-- panel zachodni-->
+                        </div>
+
+                        <!-- panel centralny -->
+                        <div class="col-12 md:col-9 lg:col-10 flex">
+                            <div class="vertical-container">
+
+                                   <ui:include src="sub/menu_wiad.xhtml"/> 
+                               <ui:include src="sub/plankont.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- panel południowy (footer) -->
+                    <div class="col-12">
+                        <ui:include src="sub/layoutNowy/south.xhtml"/>
+                    </div>
+                </div>
             </f:view>
         </ui:define>
     </ui:composition>
